--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "babel-preset-react-app": "^10.0.0",
     "css-loader": "^5.1.0",
     "sass": "^1.32.8",
-    "sass-loader": "^11.0.1",
+    "sass-loader": "10.1.1",
     "style-loader": "^2.0.0",
     "typescript": "^4.2.2"
   }
