--- a/package.json
+++ b/package.json
@@ -19,14 +19,21 @@
     "@storybook/addon-links": "^6.1.20",
     "@storybook/preset-typescript": "^3.0.0",
     "@storybook/react": "^6.1.20",
+    "@types/enzyme": "^3.10.8",
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "babel-preset-react-app": "^10.0.0",
     "css-loader": "^5.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "jest": "^26.6.3",
     "sass": "^1.32.8",
     "sass-loader": "10.1.1",
     "style-loader": "^2.0.0",
+    "ts-jest": "^26.5.2",
     "typescript": "^4.2.2"
   }
 }
