--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "hex-to-rgba": "^2.0.1",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
